Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19399

sanity-sec test_12: double free/invalid pointer on lctl nodemap modify

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Marc Vef <mvef@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/7e5d767d-1d9f-4169-a947-c2511da7dd34

      test_12 failed with the following error:

      nodemap squash_uid with 16
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master-next/920 - 5.14.0-503.40.1.el9_5.x86_64
      servers: https://build.whamcloud.com/job/lustre-master-next/920 - 5.14.0-503.40.1_lustre.el9.x86_64

      onyx-99vm4: double free or corruption (out)
      onyx-99vm4: bash: line 1: 324814 Aborted                 (core dumped) LUSTRE="/usr/lib64/lustre" bash -c "/usr/sbin/lctl nodemap modify --property squash_uid --name 14853_6 --value 88"
      pdsh@onyx-80vm7: onyx-99vm4: ssh exited with exit code 134
      CMD: onyx-99vm4 /usr/sbin/lctl nodemap modify --property squash_uid --name 14853_7 --value 88
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-sec test_12 - nodemap squash_uid with 16

            mvef Marc Vef
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: