LU-19399 utils: Fix NULL check in copy_file_expandable()

This patch fixes a NULL check after calloc that was checking for the
wrong pointer, which can cause invalid pointer faults under memory
pressure.

Test-Parameters: trivial testlist=sanity-sec
Signed-off-by: Marc Vef <mvef@whamcloud.com>
Change-Id: I7ffca4a897cc5e8cfcbe51d249e55770fda9b1aa
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61385
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: jenkins <devops@whamcloud.com>